# wyag.rs

./: .gitignore  Cargo.toml  README.md
src/: blob.rs  commit.rs  ignore.rs  index.rs  kvlm.rs  macros.rs  main.rs  object.rs  refs.rs  repository.rs  tag.rs  tree.rs
src/object/: blob.rs  commit.rs  error.rs  tag.rs  tree.rs
test/: commit
test/.gitrs/: description  index
test/.gitrs/refs/tags/: v0.1
