[package]
name = "git-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
flate2 = { version = "1.1.1", features = ["zlib"] }
hex = "0.4.3"
indexmap = "2.10.0"
log = "0.4.27"
sha1 = "0.10.6"
thiserror = "2.0.12"
